--- a/src/main/resources/ru/nucodelabs/gem/view/controller/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/main/MainSplitLayoutView.fxml
@@ -20,7 +20,7 @@
         import javafx.scene.input.KeyCodeCombination
         import javafx.scene.input.KeyCode
         import javafx.scene.input.KeyCombination
-        import ru.nucodelabs.gem.app.pref.FXPreferences
+        import ru.nucodelabs.kfx.pref.FXPreferences
         import ru.nucodelabs.gem.app.pref.UIPreferences
         import javafx.stage.Stage
 
