--- a/src/main/resources/ru/nucodelabs/gem/view/controller/main/CalculateErrorScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/main/CalculateErrorScreen.fxml
@@ -14,7 +14,7 @@
        fx:controller="ru.nucodelabs.gem.view.controller.main.CalculateErrorScreenController" fx:id="root"
        title="Расчет погрешности" width="1280">
     <scene>
-        <Scene stylesheets="@../../common.css, @CalculateErrorScreen.css">
+        <Scene stylesheets="/css/common.css, @CalculateErrorScreen.css">
             <VBox alignment="TOP_CENTER" style="-fx-padding: 15;" maxHeight="Infinity" maxWidth="Infinity">
                 <HBox>
                     <VBox spacing="10">
@@ -46,10 +46,10 @@
                         </GridPane>
                         <Label text="Формулы" styleClass="window-header"/>
                         <ImageView preserveRatio="true" fitHeight="55">
-                            <Image url="@../../../../../../img/rhoA.png"/>
+                            <Image url="/img/rhoA.png"/>
                         </ImageView>
                         <ImageView preserveRatio="true" fitHeight="65">
-                            <Image url="@../../../../../../img/k.png"/>
+                            <Image url="/img/k.png"/>
                         </ImageView>
                     </VBox>
                     <LineChart animated="false"
