--- a/src/main/resources/ru/nucodelabs/gem/view/controller/tables/ExperimentalTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/tables/ExperimentalTable.fxml
@@ -7,7 +7,7 @@
       alignment="CENTER"
       maxHeight="Infinity"
       maxWidth="Infinity"
-      stylesheets="@../../common.css"
+      stylesheets="/css/common.css"
       VBox.vgrow="ALWAYS" fx:id="root"
       fx:controller="ru.nucodelabs.gem.view.controller.tables.ExperimentalTableController">
     <fx:define>
