--- a/src/main/resources/ru/nucodelabs/gem/view/controller/main/InitialModelConfigurationView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/main/InitialModelConfigurationView.fxml
@@ -5,7 +5,7 @@
 <VBox xmlns:fx="http://javafx.com/fxml" fx:id="root"
       xmlns="http://javafx.com/javafx"
       fx:controller="ru.nucodelabs.gem.view.controller.main.InitialModelConfigurationViewController"
-      stylesheets="@../../common.css" spacing="15" style="-fx-padding: 25;">
+      stylesheets="/css/common.css" spacing="15" style="-fx-padding: 25;">
     <VBox spacing="5">
         <Label text="Минимальное значение целевой функции"/>
         <TextField text="-" fx:id="minTargetFunctionValueTextField" maxWidth="70"/>
