--- a/src/main/resources/ru/nucodelabs/gem/view/controller/main/PicketsBar.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/main/PicketsBar.fxml
@@ -5,6 +5,6 @@
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="ru.nucodelabs.gem.view.controller.main.PicketsBarController"
       prefHeight="400.0" prefWidth="600.0"
-      stylesheets="@../../common.css, @PicketsBar.css">
+      stylesheets="/css/common.css, @PicketsBar.css">
 
 </HBox>
