Optimize Model Section chart rendering speed. Add CanvasRenderPolygonChart. Remove PolygonWithNamesChart. Fix issues. Refactor.

--- a/src/main/resources/ru/nucodelabs/gem/view/controller/charts/ModelSectionSwitcher.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/charts/ModelSectionSwitcher.fxml
@@ -4,7 +4,7 @@
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="ru.nucodelabs.gem.view.controller.charts.ModelSectionSwitcherController"
-      maxWidth="Infinity" maxHeight="Infinity">
+      maxWidth="Infinity" maxHeight="Infinity" fx:id="root">
     <fx:include fx:id="linearSectionBox" source="LinearModelSection.fxml"/>
     <fx:include fx:id="logSectionBox" source="LogarithmicModelSection.fxml"/>
 </VBox>
