--- a/src/main/resources/ru/nucodelabs/gem/view/controller/charts/LogarithmicModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/charts/LogarithmicModelSection.fxml
@@ -3,9 +3,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import ru.nucodelabs.gem.view.control.chart.CanvasRenderPolygonChart?>
 <?import ru.nucodelabs.gem.view.control.chart.log.PseudoLogarithmicAxis?>
 <?import ru.nucodelabs.gem.view.control.chart.NucodeNumberAxis?>
-<?import ru.nucodelabs.gem.view.control.chart.PolygonWithNamesChart?>
 <?import ru.nucodelabs.gem.view.controller.main.UIConstantsKt?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17"
       alignment="CENTER"
@@ -17,9 +17,9 @@
     <HBox alignment="CENTER_LEFT">
         <Label fx:id="title" text="Модель, разрез" styleClass="chart-label"/>
     </HBox>
-    <PolygonWithNamesChart fx:id="chart" maxWidth="Infinity"
-                  maxHeight="Infinity" animated="false" legendVisible="false" styleClass="padded-chart"
-                  VBox.vgrow="ALWAYS">
+    <CanvasRenderPolygonChart fx:id="chart" maxWidth="Infinity"
+                              maxHeight="Infinity" animated="false" legendVisible="false" styleClass="padded-chart"
+                              VBox.vgrow="ALWAYS">
         <xAxis>
             <NucodeNumberAxis fx:id="xAxis" label="%x" side="BOTTOM" autoRanging="false"
                               minorTickVisible="false" tickUnit="25" forceMarksOnly="true"/>
@@ -31,5 +31,5 @@
                 </prefWidth>
             </PseudoLogarithmicAxis>
         </yAxis>
-    </PolygonWithNamesChart>
+    </CanvasRenderPolygonChart>
 </VBox>
