--- a/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/controller/anisotropy/main/AnisotropyMainView.fxml
@@ -118,20 +118,20 @@
                                         </Label>
                                     </graphic>
                                 </TableColumn>
-                                <TableColumn fx:id="resistanceApparentCol" sortable="false">
+                                <TableColumn fx:id="resistivityApparentCol" sortable="false">
                                     <graphic>
-                                        <Label text="%resistanceApparent">
+                                        <Label text="%resistivityApparent">
                                             <tooltip>
-                                                <Tooltip text="%resistanceApparentFull"/>
+                                                <Tooltip text="%resistivityApparentFull"/>
                                             </tooltip>
                                         </Label>
                                     </graphic>
                                 </TableColumn>
-                                <TableColumn fx:id="errorResistanceCol" sortable="false">
+                                <TableColumn fx:id="errorResistivityCol" sortable="false">
                                     <graphic>
-                                        <Label text="%errorResistanceApparent">
+                                        <Label text="%errorResistivityApparent">
                                             <tooltip>
-                                                <Tooltip text="%errorResistanceApparentFull"/>
+                                                <Tooltip text="%errorResistivityApparentFull"/>
                                             </tooltip>
                                         </Label>
                                     </graphic>
@@ -240,12 +240,12 @@
                                     </Label>
                                 </graphic>
                             </TableColumn>
-                            <TableColumn fx:id="resistanceCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
+                            <TableColumn fx:id="resistivityCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
                                          sortable="false">
                                 <graphic>
-                                    <Label text="%resistance">
+                                    <Label text="%resistivity">
                                         <tooltip>
-                                            <Tooltip text="%resistanceFull"/>
+                                            <Tooltip text="%resistivityFull"/>
                                         </tooltip>
                                     </Label>
                                 </graphic>
